--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     
 
     <!-- Services Start -->
-    <div class="container-fluid pt-6 px-5">
+    <div class="container-fluid pt-6 px-5 mb-5">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
             <h1 class="display-5 mb-0">What We Offer</h1>
             <hr class="w-25 mx-auto bg-primary">
@@ -215,7 +215,7 @@
             </div>
             <div class="col-lg-6" style="min-height: 400px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100" src="img/quote.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="img/assistance2.jpg" style="object-fit: cover;">
                 </div>
             </div>
         </div>
@@ -228,7 +228,7 @@
         <div class="row g-0">
             <div class="col-lg-6" style="min-height: 500px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100" src="img/testimonial.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="img/visit2.jpg" style="object-fit: cover;">
                 </div>
             </div>
             <div class="col-lg-6 py-6 px-5">
