--- a/service.html
+++ b/service.html
@@ -143,7 +143,7 @@
             </div>
             <div class="col-lg-6" style="min-height: 400px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100" src="img/quote.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="img/assistance2.jpg" style="object-fit: cover;">
                 </div>
             </div>
         </div>
