--- a/service.html
+++ b/service.html
@@ -79,7 +79,7 @@
                         <i class="fa fa-heartbeat fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Health Care Assistance</h3>
-                    <p class="mb-0">Focused on your well-being, we offer support for daily health routines, medication reminders, and compassionate care for a stress-free experience.</p>
+                    <p class="mb-0">We provide support for daily health routines, medication reminders, and compassionate care to ensure your well-being.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
