--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                         </div>
                         <div class="ps-4">
                             <h3>Health Care Assistance</h3>
-                            <p class="mb-0">Focused on your well-being, we offer support for daily health routines, medication reminders, and compassionate care for a stress-free experience.</p>
+                            <p class="mb-0">We provide support for daily health routines, medication reminders, and compassionate care to ensure your well-being.</p>
                         </div>
                     </div>
                     <div class="d-flex text-white mb-5">
