--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">Lifestyle Assistance</h5>
                             <h1 class="display-1 text-white mb-md-4">We Provide Assistance For Your Problems</h1>
-                            <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." target="_blank" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get Quote</a>
+                            <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." target="_blank" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Chat With Us</a>
                             <a href="" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">Lifestyle Assistance</h5>
                             <h1 class="display-1 text-white mb-md-4">Simplifying everyday living with care and expertise.</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get Quote</a>
+                            <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." target="_blank" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Chat With Us</a>
                             <a href="" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
                     </div>
@@ -101,7 +101,6 @@
                 <h1 class="display-5 mb-4">Welcome To <span class="text-primary">Global Life Care</span></h1>
                 <h4 class="text-primary mb-4"> We aim to simplify daily life with reliable and personalized care.</h4>
                 <p class="mb-4">At Global Health Care, we believe in making everyday living easier and more fulfilling. Our services cover a wide range of essential needs, including healthcare assistance for your well-being, kitchen assistance to simplify your culinary tasks, and domestic assistance to keep your home organized and stress-free. With a focus on reliability and care, we aim to be your trusted partner in creating a healthier, happier lifestyle. Let us take care of the details, so you can focus on what truly matters.</p>
-                <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." target="_blank" btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
             </div>
             <div class="col-lg-6">
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
@@ -215,8 +214,8 @@
                         <div class="d-flex align-items-center">
                             <img class="img-fluid rounded-circle" src="" alt=".">
                             <div class="ps-4">
-                                <h3>Client Name</h3>
-                                <span class="text-uppercase">Profession</span>
+                                <h3>Sophia Adams</h3>
+                                <span class="text-uppercase">Home Organizer</span>
                             </div>
                         </div>
                     </div>
@@ -225,8 +224,8 @@
                         <div class="d-flex align-items-center">
                             <img class="img-fluid rounded-circle" src="" alt=".">
                             <div class="ps-4">
-                                <h3>Client Name</h3>
-                                <span class="text-uppercase">Profession</span>
+                                <h3>Elena Petrova</h3>
+                                <span class="text-uppercase">Healthcare Manager</span>
                             </div>
                         </div>
                     </div>
@@ -235,8 +234,8 @@
                         <div class="d-flex align-items-center">
                             <img class="img-fluid rounded-circle" src="" alt=".">
                             <div class="ps-4">
-                                <h3>Client Name</h3>
-                                <span class="text-uppercase">Profession</span>
+                                <h3>John Wilson</h3>
+                                <span class="text-uppercase">Restauranteur</span>
                             </div>
                         </div>
                     </div>
@@ -277,9 +276,7 @@
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
                 <div class="d-flex">
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
                     <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
                     <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram fw-normal"></i></a>
                 </div>
             </div>
