added location and phone no

--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
             <div class="col-lg-6" style="min-height: 400px;">
                 <div class="position-relative h-100">
                     <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.1842059863357!2d-2.6020135235310726!3d51.4914870718097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48719201ff6febef%3A0xad52f22ec6880d93!2sHenleaze%20House%2C%2013%20Harbury%20Rd%2C%20Henleaze%2C%20Bristol%20BS9%204PL%2C%20UK!5e0!3m2!1sen!2sin!4v1737394735829!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
@@ -137,7 +137,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>123 Street, New York, USA</p>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>13 Harbury Rd, Henleaze, Bristol BS9 4PN, UK</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@example.com</p>
                 <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+012 345 67890</p>
             </div>
