--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <h5 class="text-white text-uppercase">Lifestyle Assistance</h5>
                             <h1 class="display-1 text-white mb-md-4">We Provide Assistance For Your Problems</h1>
                             <a href="https://wa.me/<PHONE_NUMBER>?text=Hello,%20I%20need%20assistance%20with..." target="_blank" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Chat With Us</a>
-                            <a href="" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
+                            <a href="tel:+1234567890" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -269,7 +269,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>123 Street, New York, USA</p>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>13 Harbury Rd, Henleaze, Bristol BS9 4PN, UK</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@example.com</p>
                 <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+012 345 67890</p>
             </div>
