--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,30 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <script>
+        function sendToWhatsApp() {
+            let phone = "9037898734"; // Replace with your WhatsApp number (without the "+" sign)
+
+            let name = document.getElementById('Name').value.trim();
+            let email = document.getElementById('Email').value.trim();
+            let subject = document.getElementById('Subject').value.trim();
+            let message = document.getElementById('Message').value.trim();
+
+            if (!name || !email || !subject || !message) {
+                alert("Please fill in all the fields.");
+                return;
+            }
+
+            var url = "https://wa.me/" + phone + "?text=" +
+                "Name: " + encodeURIComponent(name) + "%0a" +
+                "Email: " + encodeURIComponent(email) + "%0a" +
+                "Subject: " + encodeURIComponent(subject) + "%0a" +
+                "Message: " + encodeURIComponent(message) + "%0a";
+
+            window.open(url, '_blank').focus();
+        }
+    </script>
 </head>
 
 <div>
@@ -70,34 +94,34 @@
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
                 <h1 class="display-5 mb-4">Contact For Any Queries</h1>
-                <form>
+                <form onsubmit="event.preventDefault(); sendToWhatsApp();">
                     <div class="row g-3">
                         <div class="col-6">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe">
-                                <label for="form-floating-1">Full Name</label>
+                                <input type="text" class="form-control" id="Name" placeholder="John Doe">
+                                <label for="Name">Full Name</label>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-floating">
-                                <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com">
-                                <label for="form-floating-2">Email address</label>
+                                <input type="email" class="form-control" id="Email" placeholder="name@example.com">
+                                <label for="Email">Email address</label>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-3" placeholder="Subject">
-                                <label for="form-floating-3">Subject</label>
+                                <input type="text" class="form-control" id="Subject" placeholder="Subject">
+                                <label for="Subject">Subject</label>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="form-floating">
-                                <textarea class="form-control" placeholder="Message" id="form-floating-4" style="height: 150px"></textarea>
-                                <label for="form-floating-4">Message</label>
-                              </div>
+                                <textarea class="form-control" placeholder="Message" id="Message" style="height: 150px"></textarea>
+                                <label for="Message">Message</label>
+                            </div>
                         </div>
                         <div class="col-12">
-                            <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
+                            <button class="btn btn-primary w-100 py-3" type="submit">Send to WhatsApp</button>
                         </div>
                     </div>
                 </form>
