--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Global Life Care Pvt Ltd</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Global Life care" name="globallifecareuk, lifecare, Recurtment solution, Best Recruitment Solution Agency in uk">
+    <meta content="Global Life care" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
